--- a/kern-1/Makefile
+++ b/kern-1/Makefile
@@ -1,11 +1,14 @@
 IMAGE=kern-1.img
 
-.PHONY: build clean
+.PHONY: bootstrap
 
 all: bootstrap
 
-create:
-	sudo singularity create -s 2000 ${IMAGE}
+${IMAGE}:
+	sudo singularity create -s 5000 ${IMAGE}
 
-bootstrap: create
+bootstrap: ${IMAGE}
 	sudo singularity bootstrap ${IMAGE} bootstrap
+
+list:
+	curl -s http://ppa.launchpad.net/kernsuite/kern-1/ubuntu/dists/xenial/main/binary-amd64/Packages.gz | zgrep Package | awk {'print $$2}' | xargs echo
